# yamcot

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: analisys.py  background.fa  foreground.fa  foxa2.hbcp  foxa2.ihbcp  foxa2.meme  gata2.hbcp  gata2.ihbcp  gata2.meme  gata4.meme  hist_pass  myog.hbcp  myog.ihbcp  pif4.meme  pif4.pfm  res.txt  run.ps1  run.sh  scores_1.fasta  scores_2.fasta  sitega.mat  sitega_gata2.mat  sitega_stat6.mat
src/mimosa/: __init__.py  api.py  batches.py  cache.py  cli.py  comparison.py  execute.py  functions.py  io.py  matrix.py  models.py  pipeline.py  ragged.py  validation.py
src/mimosa/_core/: __init__.py  bindings.cpp  core_functions.h  mco_prc.cpp  pfm_to_pwm.h
src/yamcot/: functions.py  io.py  models.py
tests/: __init__.py  conftest.py  test_c_integration.py  test_integration.py  test_unit.py
tests/fixtures/: simple_pwm.meme  simple_pwm.pfm
tests/fixtures/models/bamm/: PEAKS036274_FOXA1_P35582_MACS2_motif_1.ihbcp  PEAKS036274_FOXA1_P35582_MACS2_motif_1.ihbp
tests/fixtures/models/dimont/: PEAKS036274_FOXA1_P35582_MACS2-model-1.xml  PEAKS038885_CEBPB_P28033_MACS2-model-1.xml  PEAKS038885_CEBPB_P28033_MACS2-model-2.xml  exampleD-model-1.xml  stat_dimont-model-1.xml
tests/fixtures/models/pwm/: PEAKS036274_FOXA1_P35582_MACS2.meme
tests/fixtures/models/slim/: PEAKS036274_FOXA1_P35582_MACS2-model-2.xml  PEAKS038885_CEBPB_P28033_MACS2-model-1.xml  PEAKS038885_CEBPB_P28033_MACS2-model-2.xml  example-model-1.xml
yamcot/: __init__.py  cli.py  comparison.py  execute.py  functions.py  io.py  models.py  pipeline.py  ragged.py
yamcot/_core/: __init__.py  bindings.cpp  fasta_to_plain.h  mco_prc.cpp
