[project]
name = "mimosa-tool"
version = "1.1.1"
description = "Model-Independent Motif Similarity Assessment tool"
authors = [{name = "Anton Tsukanov", email = "tsukanov@bionet.nsc.ru"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "numpy>=2.0,<2.4",
    "numba>=0.62.0",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "joblib>=1.5.3",
]

[project.urls]
Homepage = "https://github.com/ubercomrade/mimosa"
Repository = "https://github.com/ubercomrade/mimosa"
Documentation = "https://github.com/ubercomrade/mimosa#readme"


[project.scripts]
mimosa = "mimosa.cli:main_cli"

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
wheel.packages = ["src/mimosa"]
sdist.include = ["src/mimosa/_core/*.cpp", "src/mimosa/_core/*.h", "CMakeLists.txt"]

[tool.scikit-build.cmake.define]
CMAKE_OSX_DEPLOYMENT_TARGET = "10.13"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
]
test = [
    "scikit-build-core>=0.10",
    "nanobind>=2.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
