[project]
name = "mimosa-tool"
version = "1.1.4"
description = "Model-Independent Motif Similarity Assessment tool"
authors = [{name = "Anton Tsukanov", email = "tsukanov@bionet.nsc.ru"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "numpy>=2.0,<2.4",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "joblib>=1.5.3",
    "numba>=0.65.0",
]

[project.urls]
Homepage = "https://github.com/ubercomrade/mimosa"
Repository = "https://github.com/ubercomrade/mimosa"
Documentation = "https://github.com/ubercomrade/mimosa#readme"


[project.scripts]
mimosa = "mimosa.cli:main_cli"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
]
test = [
    "pytest>=8.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C90", "PLR", "SIM", "RET", "ARG"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/mimosa/api.py" = ["PLR0913"]
"src/mimosa/comparison.py" = ["PLR0913"]
"src/mimosa/functions.py" = ["PLR0913"]
"src/mimosa/models.py" = ["PLR0913"]
"examples/*.py" = ["PLR0913"]
"tests/*.py" = ["ARG001", "C901", "PLR0913", "PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
